# yuvika-llama-jni

./: README.md
jni/: CMakeLists.txt  llama_jni.cpp
jni/github/workflows/: build-llama-jni.yml
